syntax = "proto3";

message Void {};

// import "google/protobuf/empty.proto";
// import "google/protobuf/timestamp.proto";

service Bookstore {
  rpc GetBook(GetBookRequest) returns (GetBookResponse);
  rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse);
  rpc DeleteBook(DeleteBookRequest) returns (Void); // google.protobuf.Empry
  rpc ListBook(Void) returns (ListBookResponse);
  rpc CreateBook(CreateBookRequest) returns (CreateBookResponse);
}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  optional string description = 4;
  optional string image_url = 5;
  optional uint32 price = 7;
  optional uint32 pages = 8;
  optional uint64 published_date = 9; // google.protobuf.Timestamp
}

message GetBookRequest {
  string bookId = 1;
}

message GetBookResponse {
  Book books = 1;
}

message UpdateBookRequest {
  string bookId = 1;
  message UpdateData {
    optional string title = 2;
    optional string author = 3;
    optional string description = 4;
    optional string image_url = 5;
    optional uint32 price = 7;
    optional uint32 pages = 8;
    optional uint64 published_date = 9;
  }
  UpdateData data = 2;
}

message UpdateBookResponse {
  Book books = 1;
}

message DeleteBookRequest {
  string bookId = 1;
}

message ListBookResponse {
  repeated Book books = 1;
}

message CreateBookRequest {
  message CreateData {
    string title = 2;
    string author = 3;
    optional string description = 4;
    optional string image_url = 5;
    optional uint32 price = 7;
    uint32 pages = 8;
    optional uint64 published_date = 9;
  }
  CreateData book = 1;
}

message CreateBookResponse {
  Book books = 1;
}

// --------------- //

service Authors {
  rpc GetAuthor(GetAuthorRequest) returns (GetAuthorResponse);
  rpc UpdateAuthor(UpdateAuthorRequest) returns (UpdateAuthorResponse);
  rpc DeleteAuthor(DeleteAuthorRequest) returns (Void);
  rpc ListAuthor(Void) returns (ListAuthorResponse);
  rpc CreateAuthor(CreateAuthorRequest) returns (CreateAuthorResponse);
}

message Author {
  string id = 1;
  string name = 2;
  optional string image_url = 3;
  optional string description = 4;
}

message GetAuthorRequest {
  string authorId = 1;
}

message GetAuthorResponse {
  Author authors = 1;
}

message UpdateAuthorRequest {
  string authorId = 1;
  message UpdateData {
    optional string name = 2;
    optional string image_url = 3;
    optional string description = 4;
  }
  UpdateData data = 2;
}

message UpdateAuthorResponse {
  Author authors = 1;
}

message DeleteAuthorRequest {
  string authorId = 1;
}

message ListAuthorResponse {
  repeated Author authors = 1;
}

message CreateAuthorRequest {
  message CreateData {
    string name = 2;
    optional string image_url = 3;
    optional string description = 4;
  }
  CreateData author = 1;
}

message CreateAuthorResponse {
  Author authors = 1;
}
